# metting

./: main.py  pyproject.toml  requirements.txt
src/: dependencies.py  log.py  main.py  setup.py
src/api/: extract.py  metting.py  summarize.py  transcribe.py
src/model/: load_model.py
src/notebook/: main.ipynb
src/services/: __init__.py  alignment_service.py  diarization_service.py  meeting_pipeline.py  transcription_service.py
src/test/script/: main.ipynb  metting.ipynb
